--- a/rocks.toml
+++ b/rocks.toml
@@ -23,6 +23,7 @@
 "nui.nvim" = "0.3.0"
 nvim-web-devicons = "0.99"
 "todo-comments.nvim" = "1.2.0"
+nvim-surround = "2.1.5"
 
 nvim-autopairs = "scm"
 "plenary.nvim" = "scm"
