feat(mini.ai): add mini.ai

--- a/rocks.toml
+++ b/rocks.toml
@@ -27,6 +27,7 @@ rustaceanvim = "4.23.2"
 "mini.pick" = "scm"
 "mini.hipatterns" = "scm"
 "mini.diff" = "scm"
+"mini.ai" = "scm"
 nvim-autopairs = "scm"
 "plenary.nvim" = "scm"
 treesj = "scm"
