feat(rocks): use dev version for mini plugins

--- a/rocks.toml
+++ b/rocks.toml
@@ -10,11 +10,11 @@ nvim-web-devicons = "0.100"
 nvim-surround = "2.1.5"
 rustaceanvim = "4.26.1"
 "session.nvim" = "2.0.1"
-"mini.starter" = "0.9.0"
-"mini.pick" = "0.13.0"
-"mini.hipatterns" = "0.9.0"
-"mini.diff" = "0.13.0"
-"mini.ai" = "0.9.0"
+"mini.starter" = "scm"
+"mini.pick" = "scm"
+"mini.hipatterns" = "scm"
+"mini.diff" = "scm"
+"mini.ai" = "scm"
 nvim-autopairs = "scm"
 "plenary.nvim" = "scm"
 treesj = "scm"
